2009-10-15  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Add AC_CONFIG_MACRO_DIR([m4]).
	* Makefile.am: Add "ACLOCAL_AMFLAGS = -I m4".
	* libtool.m4: Remove.
	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* Makefile.in: Ditto.
	* m4/libtool.m4: New file (generated).
	* m4/lt~obsolete.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltsugar.m4: Ditto.
	* m4/ltversion.m4: Ditto.

2009-10-10  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h (GC_UNDERSCORE_STDCALL): Recognize new macro;
	prefix GC_CreateThread and GC_ExitThread with '_' if defined.
	* doc/README.macros (GC_UNDERSCORE_STDCALL): Document.

2009-10-09  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_collect_or_expand): Add "retry" argument; add the
	comments; don't use "default" stop_func on a retry if
	GC_dont_expand.
	* alloc.c (GC_collect_or_expand): Reformat the code (make the
	indentation style uniform across the function).
	* alloc.c (GC_allocobj): Pass "retry" argument to
	GC_collect_or_expand().
	* malloc.c (GC_alloc_large): Ditto.
	* include/private/gc_priv.h (GC_collect_or_expand): Move the
	declaration to malloc.c; add "retry" argument.

2009-10-09  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_start_call_back): Move the variable definition from
	misc.c.
	* include/private/gc_priv.h (GC_start_call_back): Remove the
	declaration.
	* alloc.c (GC_notify_full_gc): Remove unnecessary cast of 0.
	* alloc.c (GC_try_to_collect_inner): Also call stop_func at the
	beginning of the function.
	* include/gc.h (GC_try_to_collect): Refine the comment about
	stop_func.

2009-10-08  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_default_stop_func, GC_try_to_collect_general,
	GC_gcollect): Add the comment.
	* alloc.c (GC_try_to_collect_general): Move the assertion on
	stop_func != 0 to GC_try_to_collect().
	* alloc.c (GC_try_to_collect_general): If stop_func == 0 then use
	GC_default_stop_func instead (holding the lock).
	* alloc.c (GC_gcollect): Pass 0 as stop_func instead of